--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,8 @@ Description: Make alternative datasets from the Envirotox database available for
 License: file LICENSE
 Suggests: 
     chk,
+    dplyr,
+    readr,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Encoding: UTF-8
