--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,7 @@ Suggests:
     dplyr,
     readr,
     testthat (>= 3.0.0)
+Config/Needs/website: poissonconsulting/poissontemplate
 Config/testthat/edition: 3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
@@ -24,3 +25,4 @@ RoxygenNote: 7.3.2.9000
 Depends: 
     R (>= 3.5)
 LazyData: true
+URL: https://poissonconsulting.github.io/envirotox/
