vignette to article

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,7 @@ Suggests:
     tidyr,
     ssdtools,
     testthat (>= 3.0.0)
-Config/Needs/website: poissonconsulting/poissontemplate
+Config/Needs/website: poissonconsulting/poissontemplate, rmarkdown
 Config/testthat/edition: 3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
