--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,9 +8,11 @@ Authors@R: c(
     person("Ayla", "Pearson", , "ayla@poissonconsulting.ca", role = "ctb",
            comment = c(ORCID = "0000-0001-7388-1222"))
   )
-Description: Make alternative datasets from the Envirotox database available for
-  testing species sensitivity distribution code. The datasets should not be used
-  to make any conclusions about the toxicity of the chemicals in the database.
+Description:  The envirotox R data package provides 
+  Species Sensitivity Distribution (SSD) datasets from the Envirotox database
+  (Connors et al. 2019). The datasets are provided for assessing 
+  general patterns in SSD data and testing code. The datasets should not be used
+  to draw any conclusions about the toxicity of the individual chemicals.
 License: file LICENSE
 Suggests: 
     chk,
