--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,28 +8,29 @@ Authors@R: c(
     person("Ayla", "Pearson", , "ayla@poissonconsulting.ca", role = "ctb",
            comment = c(ORCID = "0000-0001-7388-1222"))
   )
-Description:  The envirotox R data package provides 
-  Species Sensitivity Distribution (SSD) datasets from the Envirotox database
-  (Connors et al. 2019). The datasets are provided for assessing 
-  general patterns in SSD data and testing code. The datasets should not be used
-  to draw any conclusions about the toxicity of the individual chemicals.
+Description: The envirotox R data package provides Species Sensitivity
+    Distribution (SSD) datasets from the Envirotox database (Connors et
+    al. 2019). The datasets are provided for assessing general patterns in
+    SSD data and testing code. The datasets should not be used to draw any
+    conclusions about the toxicity of the individual chemicals.
 License: file LICENSE
+URL: https://poissonconsulting.github.io/envirotox/
+Depends: 
+    R (>= 3.5)
 Suggests: 
     chk,
     dplyr,
     knitr,
     readr,
     rmarkdown,
-    tidyr,
     ssdtools,
-    testthat (>= 3.0.0)
-Config/Needs/website: poissonconsulting/poissontemplate, rmarkdown
+    testthat (>= 3.0.0),
+    tidyr
+VignetteBuilder: 
+    knitr
+Config/Needs/website: poissonconsulting/poissontemplate
 Config/testthat/edition: 3
 Encoding: UTF-8
+LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2.9000
-Depends: 
-    R (>= 3.5)
-LazyData: true
-URL: https://poissonconsulting.github.io/envirotox/
-VignetteBuilder: knitr
