--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Authors@R: c(
            comment = c(ORCID = "0000-0001-7388-1222"))
   )
 Description: The envirotox R data package provides Species Sensitivity
-    Distribution (SSD) datasets from the Envirotox database (Connors et
+    Distribution (SSD) datasets from the Envirotox database 2.0.0 (Connors et
     al. 2019). The datasets are provided for assessing general patterns in
     SSD data and testing code. The datasets should not be used to draw any
     conclusions about the toxicity of the individual chemicals.
